--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/img1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hello World!"
          android:src="@mipmap/ic_launcher"/>
@@ -20,6 +20,12 @@
          android:src="@mipmap/ic_launcher"/>
     <ImageView
         android:id="@+id/img3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+         android:src="@mipmap/ic_launcher"/>
+    <ImageView
+        android:id="@+id/img4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
