--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,19 +14,19 @@
          android:src="@mipmap/ic_launcher"/>
     <ImageView
         android:id="@+id/img2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hello World!"
          android:src="@mipmap/ic_launcher"/>
     <ImageView
         android:id="@+id/img3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hello World!"
          android:src="@mipmap/ic_launcher"/>
     <ImageView
         android:id="@+id/img4"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hello World!"
          android:src="@mipmap/ic_launcher"/>
