--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,29 +6,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img1"
+    <GridView
+        android:id="@+id/gv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-         android:src="@mipmap/ic_launcher"/>
-    <ImageView
-        android:id="@+id/img2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-         android:src="@mipmap/ic_launcher"/>
-    <ImageView
-        android:id="@+id/img3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-         android:src="@mipmap/ic_launcher"/>
-    <ImageView
-        android:id="@+id/img4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-         android:src="@mipmap/ic_launcher"/>
+        android:stretchMode="columnWidth"
+        android:numColumns="2"
+        android:verticalSpacing="10dip"
+        android:gravity="center" >
+    </GridView>
 
 </LinearLayout>
